権限移動機能を追加

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -42,7 +42,9 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
-                      <td><%= link_to I18n.t('views.button.switch'), team_path(@team.id), class: 'btn btn-sm btn-danger' %></td>
+                      <td><%= link_to I18n.t('views.button.switch'), switch_leader_team_path(@team, new_owner_id: assign.user.id),
+                        method: :patch, class: 'btn btn-sm btn-danger' if current_user.id == @team.owner_id %>
+                      </td>
                     </tr>
                   <% end %>
                 </tbody>
