--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -30,13 +30,14 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <% @working_team.agendas.each do |agenda| %>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link">
+            <p href="#" class="nav-link">
               <i class="fa fa-circle-o nav-icon"></i>
-              <p>
+              <a>
                 <%= agenda.title %>
+                <%= link_to '削除', dashboard_path(agenda), class: 'btn btn-sm btn-danger' %>
                 <i class="right fa fa-angle-left"></i>
-              </p>
-            </a>
+              </a>
+            </p>
             <ul class="nav nav-treeview" style="display: block;">
               <% agenda.articles.each do |article| %>
                 <li class="nav-item">
