--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,7 +34,7 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <a>
                 <%= agenda.title %>
-                <%= link_to '削除', dashboard_path(agenda), class: 'btn btn-sm btn-danger' %>
+                <%= link_to '削除', agenda_path(agenda), method: :delete, class: 'btn btn-sm btn-danger' if (current_user.id == agenda.user_id) || (current_user.id == @team.owner_id) %>
                 <i class="right fa fa-angle-left"></i>
               </a>
             </p>
